--- a/css/components/header.css
+++ b/css/components/header.css
@@ -35,7 +35,7 @@ header .header__right .header__image::after {
     z-index: -1;
 }
 
-header .header__right .header__image .Fernando {
+header .header__right .header__image .fernando {
     border-radius: 0.5rem;
     min-width: 25rem;
     max-width: 100%;
